# fitness_service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: default.toml  development.toml  production.toml
crates/fitness-app/: Cargo.toml
crates/fitness-app/src/: main.rs  state.rs
crates/fitness-bot/: Cargo.toml
crates/fitness-bot/src/: command.rs  engine.rs  handler.rs  lib.rs
crates/fitness-bot/src/ilink/: client.rs  mod.rs  session.rs  types.rs
crates/fitness-bot/src/platform/: ilink_platform.rs  mod.rs  wechat_webhook.rs
crates/fitness-cli/: Cargo.toml
crates/fitness-cli/src/: main.rs
crates/fitness-core/: Cargo.toml
crates/fitness-core/src/: config.rs  error.rs  types.rs
crates/fitness-entity/: Cargo.toml
crates/fitness-entity/src/: body_metrics.rs  chat_message.rs  chat_session.rs  exercise.rs  lib.rs  nutrition_log.rs  tenant.rs  user.rs  workout_log.rs  workout_plan.rs
crates/fitness-handler/: Cargo.toml
crates/fitness-handler/src/: ai_handler.rs  auth_handler.rs  lib.rs  stub_handler.rs  user_handler.rs
crates/fitness-handler/src/middleware/: auth.rs
crates/fitness-llm/: Cargo.toml
crates/fitness-llm/src/: client.rs  lib.rs  schema.rs
crates/fitness-llm/src/prompt/: chat.rs  form_check.rs  mod.rs  nutrition_advice.rs  plan_generation.rs
crates/fitness-migration/: Cargo.toml
crates/fitness-migration/src/: lib.rs  main.rs
crates/fitness-service/: Cargo.toml
crates/fitness-service/src/: ai_service.rs  exercise_service.rs  lib.rs  metrics_service.rs  nutrition_service.rs  plan_service.rs  tenant_service.rs  user_service.rs
deploy/: UBUNTU-DEPLOY.md  fitness.service
design/: product-architecture.md
doc/: work-summary.md
script/: build.sh  deploy.sh  health-check.sh  migrate.sh  setup-env.sh
script/lib/: common.sh
