[package]
name = "fitness-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
openlark.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum.workspace = true
fitness-core = { path = "../fitness-core" }
fitness-service = { path = "../fitness-service" }
