[package]
name = "fitness-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
fitness-core = { path = "../fitness-core" }
fitness-service = { path = "../fitness-service" }
fitness-llm = { path = "../fitness-llm" }
