[package]
name = "fitness-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fitness-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
uuid.workspace = true
chrono.workspace = true
fitness-core = { path = "../fitness-core" }
fitness-service = { path = "../fitness-service" }
