[package]
name = "fitness-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace deps
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
axum.workspace = true
