[package]
name = "fitness-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
validator.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
fitness-core = { path = "../fitness-core" }
fitness-entity = { path = "../fitness-entity" }
fitness-service = { path = "../fitness-service" }
fitness-bot = { path = "../fitness-bot" }
