[package]
name = "fitness-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
fitness-core = { path = "../fitness-core" }
