[package]
name = "fitness-service"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
argon2.workspace = true
rust_decimal.workspace = true
fitness-core = { path = "../fitness-core" }
fitness-entity = { path = "../fitness-entity" }
fitness-llm = { path = "../fitness-llm" }
